--- a/mobile/fiapDesafio/app/build.gradle
+++ b/mobile/fiapDesafio/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //teste com o SectionedReciclerViewAdapter
+    //implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:2.1.0'
 }
