--- a/web-api/fiapDesafio/WebApiDesafio/Web.config
+++ b/web-api/fiapDesafio/WebApiDesafio/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="conexaoProvaMobile" connectionString="server=JOSELELES-PC\SQLEXPRESS;database=ProvaMobile;Integrated Security=true;" providerName="System.Data.SqlClient"/>
+    <!--<add name="conexaoProvaMobile" connectionString="server=JOSELELES-PC\SQLEXPRESS;database=ProvaMobile;Integrated Security=true;" providerName="System.Data.SqlClient"/>-->
+    <add name="conexaoProvaMobile" connectionString="server=JOSELELES-PC\SQLEXPRESS;database=ProvaMobileComUsuario;Integrated Security=true;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
