--- a/web-api/fiapDesafio/WebApiDesafio/WebApiDesafio.csproj
+++ b/web-api/fiapDesafio/WebApiDesafio/WebApiDesafio.csproj
@@ -155,9 +155,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\UsuarioController .cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\PalestraController.cs" />
+    <Compile Include="DAO\UsuarioDAO.cs" />
     <Compile Include="DAO\DatabaseConnection.cs" />
     <Compile Include="DAO\CategoriaDAO.cs" />
     <Compile Include="DAO\PalestraDAO.cs" />
@@ -234,6 +236,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Palestra\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
